k8s/traefik.middleware.yaml
---

apiVersion: 'traefik.containo.us/v1alpha1'
kind: 'Middleware'
metadata:
  name: 'ingress-secure-headers'
spec:
  headers:
    stsSeconds: 31536
