k8s/deployment.yaml
---

apiVersion: 'apps/v1'
kind: 'Deployment'
metadata:
  name: 'api'
  labels:
    app: 'api'
spec:
  selector:
    matchLabels:
      app: 'api'
  replicas: 1 # defaulted with kustomization patch
  strategy: # defaulted with kustomization patch
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: 'RollingUpdate'
  template:
    metadata:
      labels:
        app: 'api'
    spec:
      containers:
        - name: 'api'
          image: 'ghcr.io/drinkataco/location-events-api:latest'
          ports:
            - containerPort: 3000
              protocol: 'TCP'
          imagePullPolicy: 'Always'
      restartPolicy: 'Always'
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: 'ghcr-drinkataco'

---

apiVersion: 'v1'
kind: 'Service'
metadata:
  name: 'api'
  labels:
    app: 'api'
spec:
  ports:
    - port: 80
      protocol: 'TCP'
      targetPort: 3000
  selector:
    app: 'api'
