k8s/deployment.yml
---

apiVersion: 'apps/v1'
kind: 'Deployment'
metadata:
  name: 'api'
  labels:
    app: 'api'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 'api'
  template:
    metadata:
      labels:
        app: 'api'
    spec:
      containers:
        - name: 'api'
          image: 'ghcr.io/drinkataco/location-events-api:latest'
          ports:
            - containerPort: 3000
              protocol: 'TCP'
          imagePullPolicy: 'Always'
      imagePullSecrets:
        - name: 'ghcr-drinkataco'

---

apiVersion: 'v1'
kind: 'Service'
metadata:
  name: 'api'
  labels:
    app: 'api'
spec:
  ports:
    - port: 80
      protocol: 'TCP'
      targetPort: 3000
  selector:
    app: 'api'
