k8s/ingress.yaml
---

apiVersion: 'traefik.containo.us/v1alpha1'
kind: 'IngressRoute'
metadata:
  name: 'api-ingress'
  annotations:
    kubernetes.io/ingress.class: 'traefik'
spec:
  entryPoints:
    - 'websecure'
  routes:
    - kind: 'Rule'
      match: PathPrefix(`/`)
      services:
        - name: 'api'
          port: 80
  tls:
    secretName: 'tls-certificate'
